fix: fix overlap message window and menu

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -29,7 +29,7 @@ body {
 }
 
 .message-menu {
-    max-width: 309px;
+    // max-width: 309px;
     height: 100%;
     display: flex;
 
@@ -112,7 +112,7 @@ body {
         }
 
         .menu-body {
-            // min-width: 100%;
+            max-width: 100%;
             height: 100%;
             overflow-y: scroll;
             padding: 0 8px;
@@ -138,7 +138,6 @@ body {
                 .chat-info {
                     flex-basis: 1;
                     display: none;
-                    max-width: 100%;
                     margin-top: 5px;
                     overflow: hidden;
 
@@ -196,9 +195,8 @@ body {
 
 .message-window {
     height: 100%;
-    // max-width: 75%;
     min-width: 300px;
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: column;
 
